fix: page header alignment

--- a/src/components/@shared/Page/PageHeader.module.css
+++ b/src/components/@shared/Page/PageHeader.module.css
@@ -34,13 +34,6 @@
   hyphens: auto;
 }
 
-.homeTitleContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .homeTitleContainer h1 {
   margin-bottom: calc(var(--spacer) / 2);
 }
